--- a/src/app/api-list/api-list.component.html
+++ b/src/app/api-list/api-list.component.html
@@ -1,1 +1,8 @@
-<p>test</p>
+<ul class="api-list">
+  <li *ngFor="let api of apis">
+    <div class="user-list_userdetail">
+      <span>{{api.API}}</span>
+      <span>{{api.Description}}</span>
+    </div>
+  </li>
+</ul>
